Fixed issue when too many projects overflowed onto footer and last form in createprojectwizard was ontop of footer in smaller views

--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -4,7 +4,8 @@
 	flex-direction: column;
 	justify-content: flex-end;
 	padding: 15px;
-	height: 340px;
+	z-index: 999;
+	width: 100%;
 	@media (max-width: '750px') {
 		height: 475px;
 	}
