--- a/src/views/CreateProjWizard/CreateProjectWizard.scss
+++ b/src/views/CreateProjWizard/CreateProjectWizard.scss
@@ -10,9 +10,8 @@
 	// min-height: 1000px;
 	// background-color: $franks-grey;
 	height: 100%;
-	margin: 0 auto;
+	margin: 0px 0px 340px 0px;
 
-	padding: 20px 20px;
 	.errorText {
 		color: red;
 	}
